// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkSectionListItem should render correctly 1`] = `
<div
  className="bpk-section-list-item"
>
  Hello world
</div>
`;

exports[`BpkSectionListItem should render correctly with a "href" prop 1`] = `
<a
  className="bpk-section-list-item bpk-section-list-item--interactive"
  href="#"
  onClick={null}
  target={null}
>
  Hello world
  <svg
    className="bpk-section-list-item__chevron bpk-icon--rtl-support"
    height="24"
    style={
      Object {
        "height": "1.5rem",
        "width": "1.5rem",
      }
    }
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M8.293 4.293a1 1 0 0 0 0 1.414L14.586 12l-6.293 6.293a1 1 0 1 0 1.414 1.414l7-7a1 1 0 0 0 0-1.414l-7-7a1 1 0 0 0-1.414 0z"
      fillRule="evenodd"
    />
  </svg>
</a>
`;

exports[`BpkSectionListItem should render correctly with a custom className 1`] = `
<div
  className="bpk-section-list-item custom-class"
>
  Hello world
</div>
`;

exports[`BpkSectionListItem should render correctly with an "onClick" prop 1`] = `
<button
  className="bpk-section-list-item bpk-section-list-item--interactive"
  onClick={[MockFunction]}
  type="button"
>
  Hello world
  <svg
    className="bpk-section-list-item__chevron bpk-icon--rtl-support"
    height="24"
    style={
      Object {
        "height": "1.5rem",
        "width": "1.5rem",
      }
    }
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M8.293 4.293a1 1 0 0 0 0 1.414L14.586 12l-6.293 6.293a1 1 0 1 0 1.414 1.414l7-7a1 1 0 0 0 0-1.414l-7-7a1 1 0 0 0-1.414 0z"
      fillRule="evenodd"
    />
  </svg>
</button>
`;

exports[`BpkSectionListItem should render correctly with arbitrary props 1`] = `
<div
  className="bpk-section-list-item"
  testId="123"
>
  Hello world
</div>
`;
